--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="my-element">
-      <div id="A">A</div>
-      <div id="C">C</div>
+    <div class="container">
+      <div id="my-element">
+        <div id="A">A</div>
+        <div id="C">C</div>
+      </div>
+      <input id="myInput" type="text" value="" />
+      <div id="inputText"></div>
+      <button id="myBtn">Submit</button>
+      <div id="btnContainer"></div>
     </div>
     <script src="question1.js"></script>
     <script src="question2.js"></script>
